<resources>
    <string name="app_name">Moodaktif_1</string>
    <string name="intro_text">MoodAktif\'e \nHoşgeldiniz</string>
    <string name="intro_subtitle">Sizin için en iyisi, modunuz için en güzeli MoodAktif!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Drawer Menü Başlıkları ve Butonları -->

    <string name="profile_image_desc">Profil resmi</string>
    <string name="user_name">Kullanıcı Adı</string>

    <string name="nav_profile">Profil Bilgileri</string>
    <string name="nav_sleep_tracking">Uyku Takibi</string>
    <string name="nav_read_books">Okunan Kitaplar</string>
    <string name="nav_daily_mood">Günlük Modlarım</string>
    <string name="nav_activity_suggestions">Aktivite Önerileri</string>
    <string name="nav_music">Müzikler</string>
    <string name="nav_exercises">Egzersizlerim</string>
    <string name="navigation_drawer_open">Menüyü Aç</string>
    <string name="navigation_drawer_close">Menüyü Kapat</string>

</resources>
